syntax = "proto3";

package bytebase.api.v1alpha;

import "google/api/annotations.proto";
import "google/api/expr/v1alpha1/syntax.proto";
import "api/v1alpha/annotation.proto";

option go_package = "generated-go/v1";

service CelService {
  rpc BatchParse(BatchParseRequest) returns (BatchParseResponse) {
    option (google.api.http) = {
      post: "/v1/cel/batchParse"
      body: "*"
    };
    option (bytebase.api.v1alpha.allow_without_credential) = true;
  }
  rpc BatchDeparse(BatchDeparseRequest) returns (BatchDeparseResponse) {
    option (google.api.http) = {
      post: "/v1/cel/batchDeparse"
      body: "*"
    };
    option (bytebase.api.v1alpha.allow_without_credential) = true;
  }
}

message BatchParseRequest {
  repeated string expressions = 1;
}

message BatchParseResponse {
  repeated google.api.expr.v1alpha1.Expr expressions = 1;
}

message BatchDeparseRequest {
  repeated google.api.expr.v1alpha1.Expr expressions = 1;
}

message BatchDeparseResponse {
  repeated string expressions = 1;
}
